kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-app-svc
  namespace: devops-ai
spec:
  selector:
    app: ai-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
